--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,49 +1,70 @@
-<!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
 {% extends 'flatpages/default.html' %} 
 
 {% load custom_filters %}
  
-<!-- Название у нас будет proudcts -->
 {% block title %}
 Posts
 {% endblock title %}
  
-<!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-<h1>Все новости (всего: {{news|length}})</h1>
-<h3>{{ time_now|date:'M d Y' }}</h3> <!-- Здесь мы применяем фильтр date. Он очень похож на метод strftime у даты. С его помощью мы можем выводить дату в нужном нам формате -->
-{% if news %}
+<h1>Все новости (всего на странице: {{object_list|length}})</h1>
+<h3>{{ time_now|date:'M d Y' }}</h3>
+{% if object_list %}
 <hr>
-    <table>
-        <tr>
-            <td>
-                Заголовок
-            </td>
-            <td>
-                Дата публикации
-            </td>
-            <td>
-                Текст статьи
-            </td>
-            <td>
-        </tr>
-    {% for post in news %}
+<table>
+    <thead>
+        <th><b>Заголовок</b></th>
+        <th><b>Дата публикации</b></th>
+        <th><b>Текст статьи</b></th>
+    </thead>
+    {% for post in object_list %} 
             <tr>
                 <td>
-                    <p align="left">{{ post.title|Censor }}</p>
+                <hr>
+                <a href="{% url 'post' post.id %}">{{ post.title|Censor }}</a><br>
+                <a href="{% url 'update' post.id %}"><u>Редактировать</u></a>
+                <a href="{% url 'delete' post.id %}"><u> Удалить </u></a>
                 </td>
-                <td>
-                    {{ post.creation_time|date:'d.m.Y' }}
-                </td>
-                <td>
-                    <p align="left">{{ post.text|truncatewords:50|Censor }}</p>
-                </td>
+                <td>{{ post.creation_time|date:'d.m.Y' }}</td>
+                <td><p align="left">{{ post.text|truncatewords:50|Censor }}</p></td>
             </tr>
+    {% endfor %}
+</table>
+<a href="{% url 'create' %}">Добавить статью/новость</a> <br>
+
+    <!-- Проверяем что поддерживается постраничный вывод -->
+    {% if is_paginated %}
+    
+        <!-- Если доступна предыдущая страница, то даём ссылку на неё и самую первую страницу -->
+        {% if page_obj.has_previous %}
+            <a href="?page=1">First</a>
+            <a href="?page={{ page_obj.previous_page_number }}"><</a>
+        {% endif %}
+    
+        <!-- Показываем только текущую страницу и ближайшие к ней, чтобы список не тянулся и не захламлял страницу -->
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <a>{{ num }}</a>
+            {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+                <a href="?page={{ num }}">{{ num }}</a>
+            {% endif %}
         {% endfor %}
-        </table>
-    </table>
+    
+        <!-- Если есть следующая страница, то даём ссылку на неё и на самую последнюю страницу -->
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">></a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+    {% endif %}
 {% else %}
     <h2>Новостей нет!</h2>
 {% endif %}
+
+<form method="POST">
+    {% csrf_token %} 
+    {{ form }}
+    <input type="submit" value="Добавить статью или новость">
+</form>
+
 {% endblock content %}
 
