--- a/news/templates/post.html
+++ b/news/templates/post.html
@@ -19,4 +19,6 @@ Post
         <b>Категория:</b> {{ post.category }}<br>
         -->
     </p>
+    <a href="/news/">Список статей</a>
 {% endblock content %}
+
