--- a/news/templates/search.html
+++ b/news/templates/search.html
@@ -31,7 +31,7 @@ Posts
                 <a href="{% url 'update' post.id %}"><u>Редактировать</u></a>
                 <a href="{% url 'delete' post.id %}"><u> Удалить </u></a>
             </td>
-            <td>{{ post.creation_time|date:'d.m.Y' }}</td>
+            <td>{{ post.creation_time|date:'d.m.Y H:i:s' }}</td>
             <td><p align="left">{{ post.text|truncatewords:50|Censor }}</p></td>
         </tr>
     {% endfor %}
