--- a/news/templates/post.html
+++ b/news/templates/post.html
@@ -19,6 +19,6 @@ Post
         <b>Категория:</b> {{ post.category }}<br>
         -->
     </p>
-    <a href="/news/">Список статей</a>
+    <a href="{% url 'news' %}">Список статей</a>
 {% endblock content %}
 
