--- a/news/templates/flatpages/default.html
+++ b/news/templates/flatpages/default.html
@@ -28,9 +28,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/news/">Home
-              <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile/">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/news/">Posts</a>
@@ -38,7 +39,20 @@
           <li class="nav-item">
             <a class="nav-link" href="/news/search/">Search</a>
           </li>
-
+            {% if is_authenticated %}
+              {% if is_not_author %}
+              <li class="nav-item">
+                <a class="nav-link" href="/news/upgrade/">Стать автором</a>
+              </li>
+              {% endif %}
+              <li class="nav-item">
+                <a class="nav-link" href="/accounts/logout/">Logout</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/accounts/login/">Login</a>
+              </li>
+            {% endif %}
         </ul>
       </div>
     </div>
