--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -24,6 +24,7 @@ Posts
                 <a href="{% url 'post' post.id %}">{{ post.title|Censor }}</a><br>
                 <a href="{% url 'update' post.id %}"><u>Редактировать</u></a>
                 <a href="{% url 'delete' post.id %}"><u> Удалить </u></a>
+                <a href="{% url 'subscribe' %}"><u> Подписаться </u></a>
                 </td>
                 <td>{{ post.creation_time|date:'d.m.Y H:i:s' }}</td>
                 <td><p align="left">{{ post.text|truncatewords:50|Censor }}</p></td>
